<resources>
    <string name="app_name">Books and Reviews!</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_author">Enter Author</string>
    <string name="enter_genre">Enter Genre</string>
    <string name="enter_review_title">Enter Review Title</string>
    <string name="enter_reviewer_name">Enter Reviewer Name</string>
    <string name="enter_review">Enter Review</string>
    <string name="add_review">Add Review</string>
    <string name="create_review">Create Review</string>
    <string name="back">Back</string>
    <string name="add_a_book">Add A Book</string>
    <string name="create_book">Create Book</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="add_a_new_book">Add a new Book</string>
    <string name="view_all_books">View all Books</string>
    <string name="view_user_profile">View User Profile</string>
    <string name="info">This is a student project for COMP3025 at Lakehead-Georgian. It was created by Adil Nabi. Please note that this application is purely for learning and educational purposes.</string>
    <string name="home">Home</string>
    <string name="books_and_reviews">Books and Reviews!</string>
    <string name="book_list">Book List</string>
</resources>